Rename to shrek.png

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <audio id="MyAudio" src="cha-cha-slide-made-with-Voicemod.mp3"></audio>
-    <a onclick="document.getElementById('MyAudio').play(); document.getElementById('shreck').style.animationName='chachaslide'; document.getElementById('shreck').style.animationDuration='20s';"><button>Play</button></a>
-    <img src="shreck.png" alt="Shrek" id="shreck">
+    <a onclick="document.getElementById('MyAudio').play(); document.getElementById('shrek').style.animationName='chachaslide'; document.getElementById('shrek').style.animationDuration='20s';"><button>Play</button></a>
+    <img src="shrek.png" alt="Shrek" id="shrek">
 </body>
 </html>
