Improve html, improve animation (you know it)

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cha Cha Slide</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="icon" href="favicon.ico">
 <body>
-    <audio id="MyAudio" src="cha-cha-slide-made-with-Voicemod.mp3"></audio>
-    <a onclick="document.getElementById('MyAudio').play(); document.getElementById('shrek').style.animationName='chachaslide'; document.getElementById('shrek').style.animationDuration='20s';"><button>Play</button></a>
+    <audio id="get-shreked" src="cha-cha-slide-made-with-Voicemod.mp3"></audio>
+    <button onclick="document.getElementById('get-shreked').play(); document.getElementById('shrek').style.animationName='chachaslide'; document.getElementById('shrek').style.animationDuration='20s';">Play</button>
     <img src="shrek.png" alt="Shrek" id="shrek">
 </body>
 </html>
