--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
 <body>
-    <div>
+    <div class="img-wrapper">
         <audio id="get-shreked" src="cha-cha-slide-made-with-Voicemod.mp3"></audio>
         <img src="donkey.jpg" onclick="shrekTime()" id="donkey">
+        <img src="shrek.png" class="hidden" alt="Shrek" id="shrek">
     </div>
-    <img src="shrek.png" class="hidden" alt="Shrek" id="shrek">
 </body>
 <script>
     function shrekTime() {
